2011-03-08  John Dallaway  <john@dallaway.org.uk>

	* cdl/lwip_net.cdl: Require CYGPKG_ISOINFRA.
	* include/arch/cc.h: Define ERRNO if CYGINT_ISO_ERRNO is
	implemented. Based on patch from Will Wagner. [ Bugzilla 1001169 ]

2011-01-30  Ilija Kocho  <ilijak@siva.com.mk>

	* cdl/lwip_net.cdl: New CDL option CYGSEM_LWIP_MEM_SECTION.
	* include/lwipopts.h: Enter MEM_SECTION entity.
	* src/mem.c, src/memp.c: Add an ability to use GCC section
	attribute for statically allocated buffers, pbufs, and heap.

2011-01-02  Ilija Kocho  <ilijak@siva.com.mk>

	* src/ecos/sequential.c, src/ecos/simple.c: Fixed miltiple-line
	comment warnings.

2010-12-10  Christophe Coutand  <ccoutand@stmi.com>

	* include/lwipopts.h: Fix compilation error when compiling SNMP
	code.

2010-08-02  John Dallaway  <john@dallaway.org.uk>

	* include/network.h: Match braces when including from C++ code.
	Issue reported by Will Wagner.

2010-02-07  John Dallaway  <john@dallaway.org.uk>

	* cdl/lwip_net.cdl: Rename CFLAGS_ADD and CFLAGS_REMOVE options to
	match package macro name.

2010-01-25  Simon Kallweit  <simon.kallweit@intefo.ch>

	* all: Updated to lwIP 1.3.2

2007-03-22  John Eigelaar  <jeigelaar@mweb.co.za>
                                                     
	* include/lwip/netif.h, include/lwip/inet.h: Added externC macro
	to public fucntions to make them C++ compliant.

2006-05-09  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/ecos/init.c (arp_timer): Only compile this function when
	Ethernet is supported.
	* include/lwipopts.h: PAP_SUPPORT & CHAP_SUPPORT must be either 0
	or 1 otherwise we get compiler errors.
	
2006-03-26  Uwe Kindler <uwe_kindler@web.de>

	* Updated the complete lwIP source to the latest lwIP
	CVS version 1.1.1
	* src/ecos/init.c Added call to netif_set_up(netif) in
	function lwip_set_addr() - this is required since lwIP
	version 1.0.0
	* cdl/lwip_net.cdl Minor modifications for UDP configuration
	options. Renamed CYGNUM_LWIP_TCPIP_THREAD_PRIORITY to